--- a/Proyecto_Jugadores/src/interfaz/PantallaPrincipal.form
+++ b/Proyecto_Jugadores/src/interfaz/PantallaPrincipal.form
@@ -44,6 +44,7 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="jLabel2" min="-2" pref="182" max="-2" attributes="0"/>
                   <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
+                      <Component id="jButtonInformesDeCarreras" alignment="0" max="32767" attributes="0"/>
                       <Group type="102" alignment="0" attributes="0">
                           <Component id="jButtonIniciarCarrera" min="-2" pref="85" max="-2" attributes="0"/>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
@@ -93,7 +94,9 @@
                   <Component id="jButtonIniciarCarrera" max="32767" attributes="0"/>
                   <Component id="jButtonCarrerasFinalizadas" min="-2" pref="35" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="63" max="32767" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="jButtonInformesDeCarreras" min="-2" pref="33" max="-2" attributes="0"/>
+              <EmptySpace pref="24" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -193,6 +196,14 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonCarrerasFinalizadasActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="jButtonInformesDeCarreras">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Informes de carreras"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonInformesDeCarrerasActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
