Se guardan los informes, falta arreglar el temporizador para que coja el tiempo del corredor y validar los formularios

--- a/Proyecto_Jugadores/src/interfaz/Carreras/Modificar_Carrera.form
+++ b/Proyecto_Jugadores/src/interfaz/Carreras/Modificar_Carrera.form
@@ -118,14 +118,14 @@
                   <Component id="jLabelMaximosParticipantes" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jTextFieldNuevaFechaCarrera" alignment="1" min="-2" pref="20" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" max="-2" attributes="0">
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jTextFieldNuevoNombreCarrera" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jTextFieldNuevoMaximoParticipantes" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jLabel8" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jTextFieldNuevoLugarCarrera" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
+                  <Component id="jTextFieldNuevaFechaCarrera" max="32767" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
@@ -228,6 +228,9 @@
           <StringArray count="0"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jComboBoxCarrerasActionPerformed"/>
+      </Events>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
       </AuxValues>
