--- a/Proyecto_Jugadores/src/interfaz/Corredores/Alta_Corredor.form
+++ b/Proyecto_Jugadores/src/interfaz/Corredores/Alta_Corredor.form
@@ -85,7 +85,7 @@
               <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="jButtonCancelarAltaCorredor" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="jButtonAltaCorredor" alignment="3" min="-2" pref="23" max="-2" attributes="0"/>
+                  <Component id="jButtonAltaCorredor" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace pref="40" max="32767" attributes="0"/>
           </Group>
